--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,8 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+
+
+# Giffy api key
+com.giffy.api_key= #Replace this comment with an actual api key from giffy developers resources
